--- a/Lab1/Makefile
+++ b/Lab1/Makefile
@@ -4,4 +4,4 @@ CXXFLAGS+=-Wall -Wextra
 all: sudoku_solve
 
 sudoku_solve: main.cc sudoku_basic.cc sudoku_dancing_links.cc
-	g++ -O2 -o $@ $^
+	g++ -O2 -o $@ $^ -pthread
