修改test_sample_production的编码，修改makefile（改为O3优化、增加clean功能），修改多线程版本（默认线程为CPU核心数，通过参数控制线程数量）

--- a/Lab1/single-thread/Makefile
+++ b/Lab1/single-thread/Makefile
@@ -1,7 +1,10 @@
-CXXFLAGS+=-O2 -ggdb -DDEBUG
-CXXFLAGS+=-Wall -Wextra
+# CXXFLAGS+=-O2 -ggdb -DDEBUG
+# CXXFLAGS+=-Wall -Wextra
 
 all: sudoku_solve
 
 sudoku_solve: main.cc sudoku_basic.cc sudoku_dancing_links.cc
-	g++ -O2 -o $@ $^
+	g++ -O3 -pthread -o $@ $^
+
+clean :
+	rm sudoku_solve
