--- a/Lab1/Makefile
+++ b/Lab1/Makefile
@@ -1,7 +1,10 @@
-CXXFLAGS+=-O2 -ggdb -DDEBUG
-CXXFLAGS+=-Wall -Wextra
+# CXXFLAGS+=-O2 -ggdb -DDEBUG
+# CXXFLAGS+=-Wall -Wextra
 
-all: sudoku_solve
+# all: sudoku_solve, ./Test_sample_production
 
 sudoku_solve: main.cc sudoku_basic.cc sudoku_dancing_links.cc
-	g++ -O2 -o $@ $^ -pthread
+	g++ -O3 -pthread -o $@ $^ 
+
+clean :
+	rm sudoku_solve
